# gobject-list

./: Makefile  gobject-list.c  meson.build
